--- a/levering.html
+++ b/levering.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Handelsbetingelser ved køb hos MaryLou Jewellery">
+     <meta name="description" content="Leveringsbetingelser ved køb af smykker hos MaryLou Jewellery">
     <link rel="stylesheet" href="betingelser.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
