--- a/smykker.html
+++ b/smykker.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="smykker.css" type="text/css">
-     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <meta name="description" content="MaryLou Jewellerys webshop med et udvalg af unikke smykker, som der findes få af. Køb smykker online">
     <!--Den nedstående <link rel> bruges for at hente et ikon fra w3schools -https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-shopping-basket&unicon=f291 -->
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
 
@@ -16,37 +17,35 @@
 
 
     <nav>
-    <section id="filtrering">
+        <section id="filtrering">
             <div class="knapper">
-            <div class="menu_item" data_kategori="alle">ALLE</div>
-            <div class="menu_item" data_kategori="Ringe">RINGE</div>
-            <div class="menu_item" data_kategori="Øreringe">ØRERINGE</div>
-            <div class="menu_item" data_kategori="Armbånd">ARMBÅND</div>
-            <div class="menu_item" data_kategori="Halskæder">HALSKÆDER</div>
-            <div class="menu_item" data_kategori="Vedhæng">VEDHÆNG</div>
+                <div class="menu_item" data-kategori="alle">ALLE</div>
+                <div class="menu_item" data-kategori="Ringe">RINGE</div>
+                <div class="menu_item" data-kategori="Øreringe">ØRERINGE</div>
+                <div class="menu_item" data-kategori="Armbånd">ARMBÅND</div>
+                <div class="menu_item" data-kategori="Vedhæng">VEDHÆNG</div>
                 <h1></h1>
                 <!--Ikonet er hentet fra w3schools - https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-shopping-basket&unicon=f291-->
                 <i class='fas fa-shopping-basket' style='font-size:18px; color:#F18FAB; width: 20px; height: 20px; margin-top: 8px;'></i>
             </div>
         </section>
-        </nav>
+    </nav>
     <main>
 
-<div class="dropdown">
-    <button onclick="dropFunction()" class="dropknap">FILTRERING</button>
+        <div class="dropdown">
+            <button onclick="dropFunction()" class="dropknap">FILTRERING</button>
 
-    <div id="drop" class="content">
-        <div class="menu_item" data_kategori="alle">ALLE</div>
-            <div class="menu_item" data_kategori="Ringe">RINGE</div>
-            <div class="menu_item" data_kategori="Øreringe">ØRERINGE</div>
-            <div class="menu_item" data_kategori="Armbånd">ARMBÅND</div>
-            <div class="menu_item" data_kategori="Halskæder">HALSKÆDER</div>
-            <div class="menu_item" data_kategori="Vedhæng">VEDHÆNG</div>
+            <div id="drop" class="content">
+                <div class="menu_item" data-kategori="alle">ALLE</div>
+                <div class="menu_item" data-kategori="Ringe">RINGE</div>
+                <div class="menu_item" data-kategori="Øreringe">ØRERINGE</div>
+                <div class="menu_item" data-kategori="Armbånd">ARMBÅND</div>
+                <div class="menu_item" data-kategori="Vedhæng">VEDHÆNG</div>
 
+
+            </div>
 
         </div>
-
-    </div>
 
         <section class="smykker"></section>
         <template class="smykke-template">
@@ -66,44 +65,42 @@
     </main>
 
     <script>
+        document.addEventListener("DOMContentLoaded", getJson);
 
+        let alleSmykker;
+        let smykkeTemplate = document.querySelector(".smykke-template");
+        let smykkeContainer = document.querySelector(".smykker");
+        let clickState = 0;
 
-    document.addEventListener("DOMContentLoaded", getJson);
+        smykkeFilter = "alle";
 
-    let alleSmykker;
-    let smykkeTemplate = document.querySelector(".smykke-template");
-    let smykkeContainer = document.querySelector(".smykker");
-
-
-    smykkeFilter="alle";
-
-        async function getJson(){
-            let jsonData = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/posts");
+        async function getJson() {
+            let jsonData = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/posts?per_page=38");
             alleSmykker = await jsonData.json();
             console.log(alleSmykker);
             visSmykker();
         }
 
-        document.querySelectorAll(".menu_item").forEach(knap =>{
+        document.querySelectorAll(".menu_item").forEach(knap => {
             knap.addEventListener("click", filtrering);
         })
 
-        function filtrering(){
-            smykkeContainer.textContent="";
-            smykkeFilter = this.getAttribute("data_kategori");
+        function filtrering() {
+            smykkeContainer.textContent = "";
+            smykkeFilter = this.getAttribute("data-kategori");
             visSmykker();
         }
 
-        function visSmykker(){
+        function visSmykker() {
             console.log(visSmykker + smykkeFilter);
-            alleSmykker.forEach(smykke =>{
-                if(smykkeFilter == smykke.acf.kategori){
+            alleSmykker.forEach(smykke => {
+                if (smykkeFilter == smykke.acf.kategori) {
                     udskriv();
-                } else if(smykkeFilter == "alle"){
+                } else if (smykkeFilter == "alle") {
                     udskriv();
                 }
 
-                function udskriv(){
+                function udskriv() {
                     let klon = smykkeTemplate.cloneNode(true).content;
 
                     klon.querySelector(".pris").textContent = smykke.acf.pris + "kr";
@@ -111,10 +108,10 @@
                     klon.querySelector(".titel").textContent = smykke.title.rendered;
 
 
- klon.querySelector("button").addEventListener("click", () =>{
-                       window.location.href = "single.html?id=" + smykke.id;
+                    klon.querySelector("button").addEventListener("click", () => {
+                        window.location.href = "single.html?id=" + smykke.id;
 
-                  });
+                    });
 
                     smykkeContainer.appendChild(klon);
                 }
@@ -123,21 +120,31 @@
 
         /*Jeg har brugt w3schools - https://www.w3schools.com/howto/howto_js_dropdown.asp
         Til at få filtreringspunkterne til at komme frem når der klikkes på filteringsknappen */
-          function dropFunction(){
+        function dropFunction() {
+            if (clickState == 0) {
+                // code snippet 1
+                document.querySelector(".smykker").style.marginTop = "220px";
+                document.querySelector("#drop").classList.add("visContent");
+                clickState = 1;
+            } else {
+                // code snippet 2
+                document.querySelector(".smykker").style.marginTop = "20px";
+                document.querySelector("#drop").classList.remove("visContent");
+                clickState = 0;
+            }
 
-            document.querySelector(".smykker").style.marginTop = "250px";
-            document.querySelector("#drop").classList.toggle("visContent");
+
         }
 
-        window.onclick = function(event){
-            if(!event.target.matches('.dropknap')){
+        window.onclick = function(event) {
+            if (!event.target.matches('.dropknap')) {
                 var dropdowns = document.querySelector(".content");
                 var i;
-                for (i = 0; i < dropdowns.length; i++){
+                for (i = 0; i < dropdowns.length; i++) {
                     var openDrop = dropdowns[i];
-                    if (openDrop.classList.contains('show')){
+                    if (openDrop.classList.contains('show')) {
                         openDrop.classList.remove(
-                        'show');
+                            'show');
 
 
 
@@ -151,10 +158,6 @@
 
             document.querySelector(".content").style.height = "0";
         }*/
-
-
-
-
     </script>
 </body>
 </html>
