ændring af margin

--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="header.css" type="text/css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title></title>
@@ -13,22 +13,22 @@
 <body>
 
     <section id="logo">
-    <a href="index.html">
+        <a href="index.html">
         </a>
     </section>
 
 
     <div id="sideMenu" class="sideNav">
-    <a href="javascript:void(0)" class="closebtn" style="font-size: 30px; float: right; width: 20px; border: none;" onclick="closeMenu()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" style="font-size: 30px; float: right; width: 20px; border: none; margin-right: 2vw;" onclick="closeMenu()">&times;</a>
 
 
-    <div class="punkter">
-    <a href="smykker.html">SMYKKER</a>
-    <a href="vaerkstedet.html">VÆRKSTED</a>
-    <a href="om.html">OM MARYLOU</a>
-    <a href="kontakt.html">KONTAKT</a>
-    </div>
+        <div class="punkter">
+            <a href="smykker.html">SMYKKER</a>
+            <a href="vaerkstedet.html">VÆRKSTED</a>
+            <a href="om.html">OM MARYLOU</a>
+            <a href="kontakt.html">KONTAKT</a>
         </div>
+    </div>
     <span onclick="openNav()"><i class="fa fa-navicon" style="font-size:35px;font-weight:10;margin-left: 1vw; margin-top: 1vw; color:#F18FAB; "></i></span>
 
 
@@ -36,32 +36,31 @@
 
 
     <div id="topMenu" class="topNav">
-          <section id="logo1">
-    <a href="index.html">
+        <section id="logo1">
+            <a href="index.html">
         </a>
-    </section>
+        </section>
 
-    <div class="punkter">
+        <div class="punkter">
 
-    <a href="smykker.html">SMYKKER</a>
-    <a href="vaerkstedet.html">VÆRKSTED</a>
-    <a href="om.html">OM MARYLOU</a>
-    <a href="kontakt.html">KONTAKT</a>
-    </div>
+            <a href="smykker.html">SMYKKER</a>
+            <a href="vaerkstedet.html">VÆRKSTED</a>
+            <a href="om.html">OM MARYLOU</a>
+            <a href="kontakt.html">KONTAKT</a>
+        </div>
 
     </div>
 
     <script>
-    //Åben side navigation til mobil størrelse
-        function openNav(){
+        //Åben side navigation til mobil størrelse
+        function openNav() {
             document.querySelector("#sideMenu").style.width = "100%";
         }
 
         //Luk Side navigation til mobilstørrelse
-        function closeMenu(){
+        function closeMenu() {
             document.querySelector("#sideMenu").style.width = "0";
         }
-
     </script>
 
 </body>
