--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Forside til MaryLou Jewellery som er en dansk smykkedesigner">
+    <meta name="description" content="Velkommen til MaryLou Jewellery som er en dansk smykkedesigner med butik på Frederiksberg">
     <link rel="stylesheet" href="index.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -12,7 +12,7 @@
 
 
 <body>
-<?php include "header.html"; ?>
+    <?php include "header.html"; ?>
 
     <main>
         <section id="container" class="data-container"></section>
@@ -56,7 +56,7 @@
 
 
     </main>
-<?php include "footer.html"; ?>
+    <?php include "footer.html"; ?>
     <script>
         //Hent Json filen når DOM er loaded
         document.addEventListener("DOMContentLoaded", hentJson);
