--- a/single.html
+++ b/single.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="single.css" type="text/css">
      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <title>Specifikationer</title>
+    <title>Beskrivelse af smykket</title>
 </head>
 
 <body>
