--- a/smykker.html
+++ b/smykker.html
@@ -10,7 +10,7 @@
     <!--Den nedstående <link rel> bruges for at hente et ikon fra w3schools -https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-shopping-basket&unicon=f291 -->
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
 
-    <title>Smykker</title>
+    <title>Shop smykker online</title>
 </head>
 
 <body>
