--- a/vaerkstedet.html
+++ b/vaerkstedet.html
@@ -8,14 +8,22 @@
 </head>
 
 <body>
-<!--    <?php include "header.html";?>-->
+    <!--    <?php include "header.html";?>-->
     <main>
-    <!--Template til indholdet på om siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
-    <section id="container" class="data-container"></section>
+        <!--Templates til indholdet på om siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
+        <section id="container" class="data-container"></section>
         <template class="data-template">
         <article class="wpPage">
             <h1 class="data-title"></h1>
             <p class="data-text"></p>
+            </article>
+                 </template>
+
+        <section id="container1" class="data-container1"></section>
+        <template class="data-template1">
+        <article class="wpPage">
+            <h1 class="data-title1"></h1>
+            <p class="data-text1"></p>
             </article>
                  </template>
 
@@ -33,18 +41,26 @@
         let pageTemplate = document.querySelector(".data-template");
         let pageContainer = document.querySelector(".data-container");
 
+        let fotos;
+        let fotosTemplate = document.querySelector(".data-template1");
+        let fotosContainer = document.querySelector(".data-container1");
+
         //Hent Json filen ind
-        async function hentJson(){
-            let jsonData = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=showroom");
-            pages=await jsonData.json();
+        async function hentJson() {
+            let jsonData = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=vaerksted");
+            pages = await jsonData.json();
             visPage();
+
+            let jsonData1 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=");
+            fotos = await jsonData1.json();
+            visFotos();
         }
 
-        function visPage(){
+        function visPage() {
             console.log(pages);
 
             //Løb json filen igennem
-            pages.forEach(page =>{
+            pages.forEach(page => {
                 let klon = pageTemplate.cloneNode(true).content;
                 klon.querySelector(".data-title").textContent = page.title.rendered;
                 klon.querySelector(".data-text").innerHTML = page.content.rendered;
@@ -54,6 +70,19 @@
             })
         }
 
+        function visFotos() {
+            console.log(fotos);
+
+            //Løb json filen igennem
+            fotos.forEach(fotos => {
+                let klon = fotosTemplate.cloneNode(true).content;
+                klon.querySelector(".data-title1").textContent = fotos.title.rendered;
+                klon.querySelector(".data-text1").innerHTML = fotos.content.rendered;
+
+                //Placer klonen i HTML
+                fotosContainer.appendChild(klon);
+            })
+        }
     </script>
 </body>
 </html>
