--- a/vaerkstedet.html
+++ b/vaerkstedet.html
@@ -70,9 +70,7 @@
             fotos = await jsonData1.json();
             visFotos();
 
-            let jsonData2 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=butik");
-            billede = await jsonData2.json();
-            visBillede();
+//            let jsonData2 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=butik"); // billede = await jsonData2.json(); // visBillede();
         }
 
         function visPage() {
