map på kontakt siden

--- a/kontakt.html
+++ b/kontakt.html
@@ -24,7 +24,7 @@
                  </template>
 
             <section id="container1" class="data-container1">
-            <div id="map"></div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8999.202945179293!2d12.53812116172245!3d55.67506515839277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253a1b0d9261d%3A0xff2d681764e8b880!2sMaryLou+Jewellery!5e0!3m2!1sda!2sdk!4v1545150502820" width="700" height="700" frameborder="0" style="border:0" allowfullscreen></iframe>
             </section>
 
         </section>
