--- a/footer.html
+++ b/footer.html
@@ -5,45 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Om side som omhandler Marylou Jewerllery">
     <link rel="stylesheet" href="footer.css" type="text/css">
-<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>Footer</title>
 </head>
 
 <body>
-<footer>
-    <section id="info">
-    <h1>INFO</h1>
-        <div><a href="handel.html">Handelsbetingelser</a></div>
-        <div><a href="levering.html">Levering</a></div>
-       <div><a href="retur.html">Returnering</a></div>
+    <footer>
+        <section id="info">
+            <h1>INFO</h1>
+            <div><a href="handel.html">Handelsbetingelser</a></div>
+            <div><a href="levering.html">Levering</a></div>
+            <div><a href="retur.html">Returnering</a></div>
 
-    </section>
+        </section>
 
-    <section id="Mary">
-        <h1>MARYLOU JEWELLERY</h1>
-    <p>
-        Gammel Kongevej 101<br>
-1850 Frederiksberg<br>
-Tlf: +45 22287854<br>
-Mail: maryloujewellery@mail.com<br>
-</p>
-<p>Åbningstider:<br>
-Mandag lukket<br>
-Tirsdag-fredag 11-17.30<br>
-Lørdag 11-14<br>
+        <section id="Mary">
+            <h1>MARYLOU JEWELLERY</h1>
+            <p>
+                Gammel Kongevej 101<br> 1850 Frederiksberg<br> Tlf: +45 22287854<br> Mail: maryloujewellery@mail.com<br>
+            </p>
+            <p>Åbningstider:<br> Mandag lukket<br> Tirsdag-fredag 11-17.30<br> Lørdag 11-14<br>
 
-        </p>
-    </section>
+            </p>
+        </section>
 
-    <section id="folg">
-    <h1>FØLG MARYLOU JEWELLERY</h1>
-    <div class="soME"><a href="https://www.facebook.com/MaryLou-Jewellery-1611072669123272/?fref=ts">
+        <section id="folg">
+            <h1>FØLG MARYLOU JEWELLERY</h1>
+            <div class="soME"><a href="https://www.facebook.com/MaryLou-Jewellery-1611072669123272/?fref=ts">
                 <i class="fab fa-facebook-f" style="font-size: 24px; color: black;"></i></a></div>
             <div class="soME"><a href="https://www.instagram.com/marylou_jewellery/">
                 <i class="fab fa-instagram" style="font-size: 24px; color: black;"></i></a></div>
-    </section>
+        </section>
+
+        <section id="nyhedsbrev">
+            <form class="nyhed">
+                <h1>NYHEDSBREV</h1>
+                <input id="email" type="text" placeholder="EMAIL" required><br>
+                <input id="send" type="submit" value="SEND">
+
+
+            </form>
+
+
+        </section>
 
     </footer>
 </body>
